# static_site_gen

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  PLAN.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
content/pages/: README.md  about.md
content/posts/: 2025-10-16-python-testing.md  2025-10-17-welcome.md  README.md
src/: cli.py
src/generator/: core.py  parser.py  renderer.py  utils.py
src/static_site_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
static/: README.md  style.css
static_site_gen/: __init__.py  __main__.py  cli.py
static_site_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
static_site_gen/generator/: __init__.py  core.py  output.py  parser.py  renderer.py  utils.py
static_site_gen/static_site_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: README.md  base.html  feed.xml  index.html  page.html  post.html  sitemap.xml  tag.html  tag_index.html
tests/: conftest.py  test_bug_regression.py  test_cli.py  test_core_edge_cases.py  test_coverage_gaps.py  test_integration.py  test_main.py  test_new_features.py  test_parser.py  test_renderer_edge_cases.py  test_security.py  test_utils.py
tests/fixtures/: config.yaml  draft_post.md  minimal_post.md  sample_page.md  sample_post.md
